ansible.builtin.file

--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/upgrade.yml
@@ -121,7 +121,7 @@
   when: insight_allow_crontab
 
 - name: Allow reading cron.allow
-  file:
+  ansible.builtin.file:
     path: /etc/cron.allow
     mode: 0644
   when: insight_allow_crontab
