--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/upgrade.yml
@@ -9,7 +9,7 @@
   when: artifactory_allow_crontab
 
 - name: Allow reading cron.allow
-  file:
+  ansible.builtin.file:
     path: /etc/cron.allow
     mode: 0644
   when: artifactory_allow_crontab
