--- a/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/distribution/tasks/upgrade.yml
@@ -125,7 +125,7 @@
   when: distribution_allow_crontab
 
 - name: Allow reading cron.allow
-  file:
+  ansible.builtin.file:
     path: /etc/cron.allow
     mode: 0644
   when: distribution_allow_crontab
