--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/selinux_restore_context.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/selinux_restore_context.yml
@@ -2,5 +2,5 @@
 - name: Restore SELinux content
   become: true
   ansible.builtin.command: restorecon -R -v "{{ jfrog_home_directory }}/artifactory/app/bin"
-  when: ansible_distribution == 'RedHat'
+  when: ansible_os_family == 'RedHat'
   changed_when: false
