Updating flag handler to be boolean

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/handlers/main.yml
@@ -7,7 +7,7 @@
     state: restarted
     daemon_reload: true
   when:
-    - artifactory_start_service
+    - artifactory_start_service | bool
 
 - name: Stop artifactory
   become: true
