--- a/Ansible/ansible_collections/jfrog/platform/ansible.cfg
+++ b/Ansible/ansible_collections/jfrog/platform/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = false
 stdout_callback = debug
-remote_tmp = /tmp/${USER}/ansible
+remote_tmp = ~/ansible
 timeout = 20
