[ansible] JFrog Platform 10.12.3 release

--- a/Ansible/ansible_collections/jfrog/platform/ansible.cfg
+++ b/Ansible/ansible_collections/jfrog/platform/ansible.cfg
@@ -1,5 +1,5 @@
 [defaults]
 host_key_checking = false
 stdout_callback = debug
-remote_tmp = ~/ansible
+remote_tmp = $HOME/.ansible/tmp
 timeout = 20
