--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/tasks/main.yml
@@ -63,6 +63,7 @@
     path: "{{ ssl_certificate_path }}"
     state: directory
     mode: 0755
+  when: ssl_certificate_install
 
 - name: Ensure ssl_certificate_key_path exists
   when: ssl_certificate_install
@@ -71,6 +72,7 @@
     path: "{{ ssl_certificate_key_path }}"
     state: directory
     mode: 0700
+  when: ssl_certificate_install
 
 - name: Configure certificate
   when: ssl_certificate_install
@@ -81,6 +83,7 @@
     mode: 0644
   notify: Restart nginx
   no_log: true
+  when: ssl_certificate_install
 
 - name: Configure key
   when: ssl_certificate_install
@@ -91,6 +94,7 @@
     mode: 0600
   notify: Restart nginx
   no_log: true
+  when: ssl_certificate_install
 
 - name: Restart nginx
   ansible.builtin.meta: flush_handlers
