--- a/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/insight/tasks/install.yml
@@ -17,6 +17,19 @@
     shell: /bin/bash
     state: present
 
+- name: Allow using crontab
+  ansible.builtin.lineinfile:
+    path: /etc/cron.allow
+    line: "{{ insight_user }}"
+    state: present
+  when: insight_allow_crontab
+
+- name: Allow reading cron.allow
+  ansible.builtin.file:
+    path: /etc/cron.allow
+    mode: 0644
+  when: insight_allow_crontab
+
 - name: Check if insight tar already exists
   become: true
   ansible.builtin.stat:
