--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/install.yml
@@ -17,6 +17,19 @@
     shell: /bin/bash
     state: present
 
+- name: Allow using crontab
+  ansible.builtin.lineinfile:
+    path: /etc/cron.allow
+    line: "{{ xray_user }}"
+    state: present
+  when: xray_allow_crontab
+
+- name: Allow reading cron.allow
+  ansible.builtin.file:
+    path: /etc/cron.allow
+    mode: 0644
+  when: xray_allow_crontab
+
 - name: Check if xray tar exists
   become: true
   ansible.builtin.stat:
@@ -167,7 +180,7 @@
 - name: Restart xray
   ansible.builtin.meta: flush_handlers
   when:
-    - xray_start_service
+    - xray_start_service | bool
 
 - name: Make sure xray is up and running
   ansible.builtin.uri:
@@ -180,4 +193,4 @@
   delay: 5
   when:
     - not ansible_check_mode
-    - xray_start_service
+    - xray_start_service | bool
