--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/upgrade.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/upgrade.yml
@@ -121,10 +121,23 @@
     group: "{{ xray_group }}"
     recurse: true
 
+- name: Allow using crontab
+  ansible.builtin.lineinfile:
+    path: /etc/cron.allow
+    line: "{{ xray_user }}"
+    state: present
+  when: xray_allow_crontab
+
+- name: Allow reading cron.allow
+  ansible.builtin.file:
+    path: /etc/cron.allow
+    mode: 0644
+  when: xray_allow_crontab
+
 - name: Restart xray
   ansible.builtin.meta: flush_handlers
   when:
-    - xray_start_service
+    - xray_start_service | bool
 
 - name: Make sure xray is up and running
   ansible.builtin.uri:
@@ -137,4 +150,4 @@
   delay: 5
   when:
     - not ansible_check_mode
-    - xray_start_service
+    - xray_start_service | bool
