[ansible] JFrog Platform 10.13.0 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/meta/main.yml
@@ -17,9 +17,11 @@ galaxy_info:
       versions:
         - bionic
         - focal
+        - jammy
     - name: Debian
       versions:
         - buster
+        - bullseye
   galaxy_tags:
     - postgres
     - jfrog
