--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/meta/main.yml
@@ -17,9 +17,11 @@ galaxy_info:
       versions:
         - bionic
         - focal
+        - jammy
     - name: Debian
       versions:
         - buster
+        - bullseye
     - name: Amazon
       versions:
         - 2
