--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
@@ -1,7 +1,7 @@
 # Defaults file for xray
 
 # The version of xray to install
-xray_version: 3.71.6
+xray_version: 3.71.7
 
 # Whether to enable HA
 xray_ha_enabled: false
@@ -56,9 +56,15 @@ xray_db_util_search_filter:
   ubuntu20:
     db5: 'db5.3-util.*dfsg.*ubuntu.*amd64\.deb'
     db: 'db-util.*ubuntu.*all.deb'
+  ubuntu22:
+    db5: ‘db5.3-util.*dfsg.*ubuntu3.*amd64\.deb’
+    db: ‘db-util.*ubuntu.*all.deb’
   debian10:
     db5: 'TBD'
     db: 'db-util_([0-9]{1,3}\.?){3}.*nmu1_all\.deb'
+  debian11:
+    db5: ‘TBD’
+    db: ‘db-util_([0-9]{1,3}\.?){3}.*nmu1_all\.deb’
 
 
 yum_python_interpreter: >-
