--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/meta/main.yml
@@ -15,13 +15,13 @@ galaxy_info:
         - 8
     - name: Ubuntu
       versions:
-        - xenial
         - bionic
         - focal
+        - jammy
     - name: Debian
       versions:
-        - stretch
         - buster
+        - bullseye
   galaxy_tags:
     - insight
     - jfrog
