Fix for #298 redirect http to https

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/files/redirect_http_to_https.conf
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx_ssl/files/redirect_http_to_https.conf
@@ -1,5 +1,8 @@
 server {
-    listen 80;
-    server_name _;
-    return 301 https://$host$request_uri;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+
+    location / {
+        return 301 https://$host/$request_uri;
+    }
 }
