Fix for #305 Set file-system storage for single server.
Signed-off-by: Bas Meijer <bas.meijer@enexis.nl>

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/main.yml
@@ -1,3 +1,14 @@
+- name: Get artifactory_servers count
+  ansible.builtin.set_fact:
+    artifactory_server_count: "{{ groups['artifactory_servers'] | length }}"
+
+- name: Set file-system storage for single server
+  ansible.builtin.set_fact:
+    artifactory_binarystore: "{{ artifactory_filestore }}"
+  when:
+    - artifactory_enabled
+    - artifactory_server_count | int == 1
+
 - name: Perform installation
   ansible.builtin.include_tasks: "install.yml"
   when:
