Fix for #307 artifactory service stopping

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
@@ -2,3 +2,4 @@
 - name: Create artifactory service
   become: true
   ansible.builtin.command: "{{ artifactory_home }}/app/bin/installService.sh"
+  notify: Restart artifactory
