[ansible/artifactory] Fix for #307 artifactory service stopping (#310)
* Fix for #307 artifactory service stopping

* Only install artifactory service if not installed

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
@@ -1,4 +1,9 @@
 ---
+- name: Get service facts
+  ansible.builtin.service_facts:
+
 - name: Create artifactory service
   become: true
   ansible.builtin.command: "{{ artifactory_home }}/app/bin/installService.sh"
+  when: ansible_facts.services['artifactory.service'] is not defined
+  notify: Restart artifactory
