[jfrog-platform] 10.14.1 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/defaults/main.yml
@@ -92,6 +92,20 @@ artifactory_systemyaml: |-
     entrypoints:
       internalPort: 8046
 
+# Provide binarystore XML content below with 2-space indentation
+artifactory_binarystore: |-
+  {%- if artifactory_ha_enabled -%}
+  <?xml version="1.0" encoding="UTF-8"?>
+  <config version="2">
+    <chain template="cluster-file-system"/>
+  </config>
+  {%- else -%}
+  <?xml version="1.0" encoding="UTF-8"?>
+  <config version="1">
+    <chain template="file-system"/>
+  </config>
+  {%- endif -%}
+
 # Note: artifactory_systemyaml_override is by default false,  if you want to change default artifactory_systemyaml
 artifactory_systemyaml_override: false
 
