[ansible] JFrog Platform 10.14.3 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/defaults/main.yml
@@ -1,7 +1,7 @@
 # Defaults file for artifactory
 
 # The version of artifactory to install
-artifactory_version: 7.63.5
+artifactory_version: 7.63.7
 
 # Set this to true when SSL is enabled (to use artifactory_nginx_ssl role), default to false (implies artifactory uses artifactory_nginx role )
 artifactory_nginx_ssl_enabled: false
@@ -47,6 +47,8 @@ artifactory_untar_home: "{{ jfrog_home_directory }}/artifactory-{{ artifactory_f
 # Timeout in seconds for URL request
 artifactory_download_timeout: 10
 
+# Added optional variable to download from external url
+postgres_driver_download: true
 postgres_driver_version: 42.6.0
 postgres_driver_download_url: "https://repo1.maven.org/maven2/org/postgresql/postgresql/\
   {{ postgres_driver_version }}/postgresql-{{ postgres_driver_version }}.jar"
