--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -194,6 +194,7 @@
     - postgres_driver_download_url is defined
     - not database_driver.stat.exists
     - not included_database_driver.stat.exists
+    - postgres_driver_download | bool
   notify: Restart artifactory
 
 - name: Restore SELinux content
