[ansible] Fixes #331 Install doesn't work with non-default artifactory_user and artifactory_group

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/shared/install_service.yml
@@ -1,5 +1,5 @@
 ---
 - name: Create artifactory service
   become: true
-  ansible.builtin.command: "{{ artifactory_home }}/app/bin/installService.sh"
+  ansible.builtin.command: "{{ artifactory_home }}/app/bin/installService.sh {{ artifactory_user }} {{ artifactory_group }}"
   notify: Restart artifactory
