--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/defaults/main.yml
@@ -24,7 +24,7 @@ xray_home: "{{ jfrog_home_directory }}/xray"
 
 xray_install_script_path: "{{ xray_home }}/app/bin"
 xray_thirdparty_path: "{{ xray_home }}/app/third-party"
-xray_archive_service_cmd: "{{ xray_install_script_path }}/installService.sh"
+xray_archive_service_cmd: "{{ xray_install_script_path }}/installService.sh --user {{ xray_user }} --group {{ xray_group }}"
 xray_service_file: /lib/systemd/system/xray.service
 
 # Xray users and groups
