[ansible] JFrog Platform 10.15.3 release

--- a/Ansible/ansible_collections/jfrog/platform/distribution.yml
+++ b/Ansible/ansible_collections/jfrog/platform/distribution.yml
@@ -3,4 +3,5 @@
   collections:
     - community.general
   roles:
-    - distribution
+    - role: distribution
+      when: distribution_enabled | bool
