--- a/Ansible/ansible_collections/jfrog/platform/postgres.yml
+++ b/Ansible/ansible_collections/jfrog/platform/postgres.yml
@@ -1,7 +1,8 @@
 - name: Play for postgres_servers
-  hosts: postgres
+  hosts: postgres_servers
   collections:
     - community.postgresql
     - community.general
   roles:
-    - postgres
+    - role: postgres
+      when: postgres_enabled | bool
