[ansible/artifactory] Configure admin credentials  (#335)
* Setup admin credentials - credits: @eugene-krivosheyev

* README.md

* CHANGELOG.md

Signed-off-by: Bas Meijer <bas.meijer@enexis.nl>

* Revert directory creation.

* artifactory_admin_password was not used before, define it to manage it with Ansible.

* Stay secure!

---------

Signed-off-by: Bas Meijer <bas.meijer@enexis.nl>

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -110,7 +110,7 @@
     group: "{{ artifactory_group }}"
   loop:
     - "{{ artifactory_home }}/var/data"
-    - "{{ artifactory_home }}/var/etc"
+    - "{{ artifactory_home }}/var/etc/"
     - "{{ artifactory_home }}/var/etc/security/"
     - "{{ artifactory_home }}/var/etc/artifactory/info/"
 
@@ -166,6 +166,18 @@
   when:
     - artifactory_licenses is defined
     - artifactory_licenses | length > 0
+  notify: Restart artifactory
+
+- name: Set up Artifactory admin account 
+  ansible.builtin.template:
+    src: bootstrap.creds
+    dest: "{{ artifactory_home }}/var/etc/access/"
+    owner: "{{ artifactory_user }}"
+    group: "{{ artifactory_group }}"
+    mode: 0600
+  when: 
+    - artifactory_admin_username is defined
+    - artifactory_admin_password is defined
   notify: Restart artifactory
 
 - name: Check if included database driver is the correct version
