[ansible] JFrog Platform 10.16.0 release

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -110,7 +110,7 @@
     group: "{{ artifactory_group }}"
   loop:
     - "{{ artifactory_home }}/var/data"
-    - "{{ artifactory_home }}/var/etc/"
+    - "{{ artifactory_home }}/var/etc"
     - "{{ artifactory_home }}/var/etc/security/"
     - "{{ artifactory_home }}/var/etc/artifactory/info/"
 
