--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory/tasks/install.yml
@@ -169,6 +169,7 @@
   notify: Restart artifactory
 
 - name: Set up Artifactory admin account 
+  become: true
   ansible.builtin.template:
     src: bootstrap.creds.j2
     dest: "{{ artifactory_home }}/var/etc/access/bootstrap.creds"
