--- a/Ansible/ansible_collections/jfrog/platform/roles/postgres/vars/Debian.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/postgres/vars/Debian.yml
@@ -6,4 +6,9 @@ default_postgresql_external_pid_file: /var/run/postgresql/{{ postgres_version }}
 
 default_postgres_apt_key_id: '0x7FCC7D46ACCC4CF8'
 default_postgres_apt_key_url: https://www.postgresql.org/media/keys/ACCC4CF8.asc
-default_postgres_apt_repository_repo: deb https://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main
+default_postgres_apt_repository_repo: >-
+    {%- if ansible_distribution_release == 'bionic' -%}
+        deb https://apt-archive.postgresql.org/pub/repos/apt {{ ansible_distribution_release }}-pgdg main
+    {%- else -%}
+        deb https://apt.postgresql.org/pub/repos/apt/ {{ ansible_distribution_release }}-pgdg main
+    {%- endif -%}
