Support el9 in rabbitmq setup

--- a/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/setup/RedHat.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/xray/tasks/rabbitmq/setup/RedHat.yml
@@ -5,6 +5,8 @@
             el7
         {%- elif linux_distro in ['centos8','redhat8'] -%}
             el8
+        {%- elif linux_distro in ['centos9','redhat9'] -%}
+            el9
         {%- endif -%}
 
 - name: Find socat package
