update meta to include RHEL9 and Ubuntu Noble. Fixed issue with install repositories.

--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/config/default.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/config/default.yml
@@ -29,7 +29,7 @@
     mode: "{{ template_nginx_artifactory.mode }}"
   notify: Restart Nginx
 
-- name: Ensure nginx dir exists
+- name: Ensure Nginx dir exists
   become: true
   ansible.builtin.file:
     path: '/var/opt/jfrog/nginx/ssl'
