--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/meta/main.yml
@@ -11,13 +11,15 @@ galaxy_info:
   platforms:
     - name: EL
       versions:
-        - 7
+        - 7 
         - 8
+        - 9
     - name: Ubuntu
       versions:
         - bionic
         - focal
         - jammy
+        - noble
     - name: Debian
       versions:
         - buster
