--- a/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/repos/debian.yml
+++ b/Ansible/ansible_collections/jfrog/platform/roles/artifactory_nginx/tasks/repos/debian.yml
@@ -1,11 +1,11 @@
 ---
-- name: Import nginx signing key
+- name: Import Nginx signing key
   ansible.builtin.apt_key:
     url: "{{ nginx_repo_signing_key }}"
     state: present
   become: true
 
-- name: Add nginx stable repo
+- name: Add Nginx stable repo
   ansible.builtin.apt_repository:
     repo: "deb {{ nginx_official_repo_url }} {{ ansible_facts['ansible_distribution_release'] | lower }} nginx"
     filename: "{{ nginx_official_repo_filename }}"
